<resources>
    <string name="app_name">掌中档</string>
    <string name="action_settings">Settings</string>
    <string name="app_tittle">档案管理</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drop_down_list_header_default_text">点击可以刷新</string>
    <string name="drop_down_list_header_pull_text">下拉可以刷新</string>
    <string name="drop_down_list_header_release_text">松开可以刷新</string>
    <string name="drop_down_list_header_loading_text">加载中…</string>
    <string name="drop_down_list_footer_default_text">更多</string>
    <string name="drop_down_list_footer_loading_text">加载中…</string>
    <string name="drop_down_list_footer_no_more_text">没有更多了</string>

    <string name="archives_flowchart">创建流程</string>
    <string name="archives_baseinfo">基本信息</string>
    <string name="archives_bankinfo">银行信息</string>
    <string name="archives_licence">营业执照</string>
    <string name="archives_idcard">法人身份证</string>
    <string name="archives_contract">经销商协议书</string>
    <string name="archives_grouphoto">经销商合影</string>

    <!--基本信息-->
    <string name="step_tv_client_type">类型:</string>
    <string name="step_tv_client_level">层级:</string>
    <string name="step_tv_client_uplevel">上级商:</string>
    <string name="step_tv_client_name">名称:</string>
    <string name="step_tv_client_owner">法人代表:</string>
    <string name="step_tv_client_phone">联系电话:</string>
    <string name="step_tv_client_address">地址:</string>
    <string name="step_tv_client_lnglat">获取位置:  </string>
    <string name="step_ev_client_uplevel">选择上级经销商</string>
    <string name="step_ev_client_name">输入经销商名称</string>
    <string name="step_ev_client_owner">输入法人代表</string>
    <string name="step_ev_phone">输入联系电话</string>
    <string name="step_ev_address">点击选择地区</string>
    <string name="step_ev_address2">输入详细地址</string>
    <string name="step_ev_lnglat"> 点击获取经纬度</string>
    <string name="step_tv_client_area">代理区域:</string>
    <string name="step_ev_client_area">输入代理区域</string>

    <!--银行信息-->
    <string name="step_tv_bank_name">开户行:</string>
    <string name="step_tv_bank_owner">户主:</string>
    <string name="step_tv_bank_number">银行卡号:</string>
    <string name="step_ev_bank_owner">输入户主姓名</string>
    <string name="step_ev_bank_number">输入银行卡号</string>
    <string name="step_ev_bank_name">点击选择开户行</string>
    <!--发票信息-->
    <string name="step_tv_invoice_type">发票类型</string>
    <string name="step_tv_invoice_banknum">对公账号:</string>
    <string name="step_tv_invoice_bankname">开户行:</string>
    <string name="step_tv_invoice_bankname2">支行名称:</string>
    <string name="step_tv_invoice_bankowner">户主:</string>
    <string name="step_tv_invoice_phone">电话:</string>
    <string name="step_ev_invoice_banknum">输入对公账号</string>
    <string name="step_ev_invoice_bankname">点击选择开户行</string>
    <string name="step_ev_invoice_bankname2">输入支行名称</string>
    <string name="step_ev_invoice_bankowner">输入户主</string>
    <string name="step_ev_inovice_phone">输入电话</string>
    <string name="invoice_type_zy">增值税专用发票</string>
    <string name="invoice_type_pt">普通发票</string>
    <string name="step_tv_invoice_vatnum">增值税号:</string>
    <string name="step_et_invoice_vatnum">输入增值税号</string>
    <string name="step_tv_invoice_image">税务登记证:</string>

    <string name="step_tv_photo_tips">点击上方图片,\n拍照或从相册选择需要上传的照片</string>
    <string name="step_tv_groupphoto_tips">拍照时必须以店面为背景,业务人员和经销商同时出现在画面中,经销商须手持营业执照和身份证放于胸前.</string>
    <!--界面tittle-->
    <string name="title_activity_settings">设置</string>
    <string name="title_activity_clientinfo">经销商</string>
    <string name="title_activity_archiveinfo">申请单</string>
    <string name="title_activity_address">选择地址</string>

    <string name="icons_setting">&#xe73a;</string>
    <string name="icons_lock">&#xe6c2;</string>
    <string name="icons_location">&#xe651;</string>


</resources>
