<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--银行信息-->

    <include
        android:id="@+id/in_head"
        layout="@layout/activity_head2" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:background="@color/colorWhite"
        android:scrollbarFadeDuration="5"
        android:scrollbarStyle="insideOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="vertical">

            <!--发票类型-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/left_text_width"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:text="@string/step_tv_invoice_type" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/right_layout_margin"
                    android:gravity="left"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:id="@+id/rg_invoicetype"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/rb_ptfp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/invoice_type_pt" />

                        <RadioButton
                            android:id="@+id/rb_zyfp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/invoice_type_zy" />
                    </RadioGroup>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!--银行卡号-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/left_text_height"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/left_text_width"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/step_tv_bank_number" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/right_layout_margin"
                        android:gravity="left"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/et_banknumber"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:hint="@string/step_ev_bank_number"
                            android:textSize="@dimen/editview_textsize" />

                    </LinearLayout>
                </LinearLayout>
                <!--开户行-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/left_text_height"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/left_text_width"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/step_tv_bank_name" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="left"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_bankname"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:gravity="center_vertical"
                            android:text="@string/step_ev_bank_name" />
                    </LinearLayout>
                </LinearLayout>

                <!--户主-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/left_text_height"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/left_text_width"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/step_tv_bank_owner" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="left"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/et_bankowner"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:hint="@string/step_ev_bank_owner"
                            android:textSize="@dimen/editview_textsize" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_invoice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black_invoice"
                android:orientation="vertical"
                android:visibility="visible">
                <!--对公账号-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/left_text_height"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/left_text_width"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/step_tv_invoice_banknum" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/right_layout_margin"
                        android:gravity="left"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/et_invoicebanknum"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:hint="@string/step_ev_bank_number"
                            android:textSize="@dimen/editview_textsize" />

                    </LinearLayout>
                </LinearLayout>
                <!--对公账户开户行-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/left_text_height"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/left_text_width"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/step_tv_invoice_bankname" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="left"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_invoicebankname"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:gravity="center_vertical"
                            android:text="@string/step_ev_invoice_bankname" />
                    </LinearLayout>
                </LinearLayout>

                <!--支行-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/left_text_height"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/left_text_width"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/step_tv_invoice_bankname2" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="left"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/et_invoicebankname2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/step_ev_invoice_bankname2"
                            android:textSize="@dimen/editview_textsize" />
                    </LinearLayout>
                </LinearLayout>

                <!--对公账号户主-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/left_text_height"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/left_text_width"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/step_tv_bank_owner" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="left"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/et_invoicebankowner"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:hint="@string/step_ev_bank_owner"
                            android:textSize="@dimen/editview_textsize" />

                    </LinearLayout>
                </LinearLayout>

                <!--对公账号电话-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/left_text_height"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/left_text_width"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/step_tv_invoice_phone" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="left"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/et_invoicebankphone"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:hint="@string/step_ev_inovice_phone"
                            android:textSize="@dimen/editview_textsize" />

                    </LinearLayout>
                </LinearLayout>

                <!--认证地址-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/left_text_height"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/left_text_width"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/step_tv_client_address" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="left"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/et_invoiceaddr"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:hint="@string/step_ev_address2"
                            android:textSize="@dimen/editview_textsize" />

                    </LinearLayout>
                </LinearLayout>

                <!--增值税号-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/left_text_height"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/left_text_width"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/step_tv_invoice_vatnum" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="left"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/et_invoicevatnum"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:hint="@string/step_et_invoice_vatnum"
                            android:textSize="@dimen/editview_textsize" />

                    </LinearLayout>
                </LinearLayout>

                <!--税务登记证-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="10dp"
                            android:layout_height="20dp"
                            android:background="@color/colorTitleBlue" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:gravity="center_vertical"
                            android:text="@string/step_tv_invoice_image"
                            android:textSize="@dimen/editview_textsize" />
                    </LinearLayout>


                    <ImageView
                        android:id="@+id/iv_invoiceimage"
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:background="@color/colorGray"
                        android:scaleType="fitCenter"
                        android:src="@mipmap/picture" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>